--- a/Web Development/3.Mini_Projects/Simly_Me/index.html
+++ b/Web Development/3.Mini_Projects/Simly_Me/index.html
@@ -137,7 +137,7 @@
         </div>
     </div>
     <footer class="container-fluid text-center bg-4">
-        <p>Bootstrap Theme Made By <a href="#">Nikhil Prasad</a></p>
+        <p>Bootstrap Theme Made By <a href="../MyFirstSite/index.html">Nikhil Prasad</a></p>
     </footer>
 </body>
 
